SWI-2779 Add Support for Custom Badges
