# src/types/open-api.ts
@@ -64,6 +64,20 @@ export interface OpenAPIPath {
   $ref?: string;
 }
 
+export type OperationCustomBadgeType =
+  | 'primary'
+  | 'success'
+  | 'warning'
+  | 'error'
+  | 'global'
+  | 'usonly'
+  | 'experimental';
+
+export interface OperationCustomBadge {
+  name: string;
+  type: OperationCustomBadgeType;
+}
+
 export interface OpenAPIXCodeSample {
   lang: string;
   label?: string;
@@ -83,6 +97,7 @@ export interface OpenAPIOperation {
   deprecated?: boolean;
   security?: OpenAPISecurityRequirement[];
   servers?: OpenAPIServer[];
+  'x-badges'?: OperationCustomBadge[];
   'x-codeSamples'?: OpenAPIXCodeSample[];
   'x-code-samples'?: OpenAPIXCodeSample[]; // deprecated
 }
