# src/utils/openapi.ts
@@ -662,6 +662,7 @@ export function isRedocExtension(key: string): boolean {
     'x-traitTag': true,
     'x-additionalPropertiesName': true,
     'x-explicitMappingOnly': true,
+    'x-badges': true,
   };
 
   return key in redocExtensions;
